@@ -8,10 +8,6 @@
  *  Separators
  */
 
-body * {
-  font-family: verdana, arial, sans-serif;
-}
-
 div#content a {
   color: #3465a4;
   border-bottom: 1px dotted #888;
